// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Sidebar.tsx Filters go to the filters route 1`] = `
<button
  class=" css-a8hcye"
  data-testid="sidebar-filters"
  type="button"
>
  <span
    class=" css-1spmf3f"
  >
    <span
      aria-hidden="true"
      class="css-1wits42"
      data-vc="icon-undefined"
      style="--icon-primary-color: white; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
    >
      <svg
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M7 13h10l1-2H6zM3.99 6c-.55 0-.79.41-.55.9L4 8h16l.55-1.1c.25-.5.01-.9-.54-.9zm6.79 11.56a.87.87 0 0 0 .73.44h.99c.28 0 .61-.2.73-.44L14 16h-4z"
          fill="currentcolor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="css-b5o75w"
    >
      Filters
    </span>
  </span>
</button>
`;

exports[`components/Sidebar.tsx Filters go to the home if filters path already shown 1`] = `
<button
  class=" css-a8hcye"
  data-testid="sidebar-filters"
  type="button"
>
  <span
    class=" css-1spmf3f"
  >
    <span
      aria-hidden="true"
      class="css-1wits42"
      data-vc="icon-undefined"
      style="--icon-primary-color: white; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
    >
      <svg
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M7 13h10l1-2H6zM3.99 6c-.55 0-.79.41-.55.9L4 8h16l.55-1.1c.25-.5.01-.9-.54-.9zm6.79 11.56a.87.87 0 0 0 .73.44h.99c.28 0 .61-.2.73-.44L14 16h-4z"
          fill="currentcolor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="css-b5o75w"
    >
      Filters
    </span>
  </span>
</button>
`;

exports[`components/Sidebar.tsx Filters show filters count if any are saved 1`] = `
<button
  class=" css-1pe4njs"
  data-testid="sidebar-filters"
  type="button"
>
  <span
    class=" css-1spmf3f"
  >
    <span
      aria-hidden="true"
      class="css-1wits42"
      data-vc="icon-undefined"
      style="--icon-primary-color: white; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
    >
      <svg
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M7 13h10l1-2H6zM3.99 6c-.55 0-.79.41-.55.9L4 8h16l.55-1.1c.25-.5.01-.9-.54-.9zm6.79 11.56a.87.87 0 0 0 .73.44h.99c.28 0 .61-.2.73-.44L14 16h-4z"
          fill="currentcolor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="css-b5o75w"
    >
      Filters
    </span>
  </span>
</button>
`;

exports[`components/Sidebar.tsx Group by products should group notifications by product 1`] = `
<button
  class=" css-1pe4njs"
  data-testid="sidebar-group-by-product"
  type="button"
>
  <span
    class=" css-1spmf3f"
  >
    <span
      aria-label="groupByProduct"
      class="css-1wits42"
      data-vc="icon-undefined"
      role="img"
      style="--icon-primary-color: white; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
    >
      <svg
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M3 18a1 1 0 0 0 .99 1H20a.99.99 0 0 0 1-1v-1H3zm0-7h18V9H3zm0-4h18V6c0-.55-.44-1-.99-1H3.99A.99.99 0 0 0 3 6zm0 8h18v-2H3z"
          fill="currentcolor"
        />
      </svg>
    </span>
    <span
      class="css-b5o75w"
    >
      Group notifications by products
    </span>
  </span>
</button>
`;

exports[`components/Sidebar.tsx Group by products should order notifications by date 1`] = `
<button
  class=" css-a8hcye"
  data-testid="sidebar-group-by-product"
  type="button"
>
  <span
    class=" css-1spmf3f"
  >
    <span
      aria-label="groupByProduct"
      class="css-1wits42"
      data-vc="icon-undefined"
      role="img"
      style="--icon-primary-color: white; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
    >
      <svg
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M3 18a1 1 0 0 0 .99 1H20a.99.99 0 0 0 1-1v-1H3zm0-7h18V9H3zm0-4h18V6c0-.55-.44-1-.99-1H3.99A.99.99 0 0 0 3 6zm0 8h18v-2H3z"
          fill="currentcolor"
        />
      </svg>
    </span>
    <span
      class="css-b5o75w"
    >
      Group notifications by products
    </span>
  </span>
</button>
`;

exports[`components/Sidebar.tsx Group by products should toggle group by products 1`] = `
<button
  class=" css-a8hcye"
  data-testid="sidebar-group-by-product"
  type="button"
>
  <span
    class=" css-1spmf3f"
  >
    <span
      aria-label="groupByProduct"
      class="css-1wits42"
      data-vc="icon-undefined"
      role="img"
      style="--icon-primary-color: white; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
    >
      <svg
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M3 18a1 1 0 0 0 .99 1H20a.99.99 0 0 0 1-1v-1H3zm0-7h18V9H3zm0-4h18V6c0-.55-.44-1-.99-1H3.99A.99.99 0 0 0 3 6zm0 8h18v-2H3z"
          fill="currentcolor"
        />
      </svg>
    </span>
    <span
      class="css-b5o75w"
    >
      Group notifications by products
    </span>
  </span>
</button>
`;

exports[`components/Sidebar.tsx notifications icon renders correct icon when there are more notifications available 1`] = `
<button
  class=" css-1srvl33"
  data-testid="sidebar-notifications"
  type="button"
>
  <span
    class=" css-1spmf3f"
  >
    <span
      aria-hidden="true"
      class="css-1wits42"
      data-vc="icon-undefined"
      style="--icon-primary-color: white; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
    >
      <svg
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M6.49 17.67a2 2 0 0 0 2.83 0l-2.83-2.83a2 2 0 0 0 0 2.83m4.89-12.19-.72.73c-.78.78-2.21 1.81-3.21 2.31l-3.02 1.51c-.49.25-.58.77-.19 1.17l8.56 8.56c.4.4.92.31 1.17-.19l1.51-3.02c.49-.99 1.53-2.42 2.31-3.21l.73-.73a5.05 5.05 0 0 0 .64-6.36 1.01 1.01 0 1 0-1.35-1.49q-.04.04-.07.08A5.04 5.04 0 0 0 14.95 4a5.04 5.04 0 0 0-3.57 1.48"
          fill="currentcolor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="css-b5o75w"
    >
      Notifications
    </span>
  </span>
</button>
`;

exports[`components/Sidebar.tsx notifications icon renders correct icon when there are no notifications 1`] = `
<button
  class=" css-a8hcye"
  data-testid="sidebar-notifications"
  type="button"
>
  <span
    class=" css-1spmf3f"
  >
    <span
      aria-hidden="true"
      class="css-1wits42"
      data-vc="icon-undefined"
      style="--icon-primary-color: white; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
    >
      <svg
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M6.49 17.67a2 2 0 0 0 2.83 0l-2.83-2.83a2 2 0 0 0 0 2.83m4.89-12.19-.72.73c-.78.78-2.21 1.81-3.21 2.31l-3.02 1.51c-.49.25-.58.77-.19 1.17l8.56 8.56c.4.4.92.31 1.17-.19l1.51-3.02c.49-.99 1.53-2.42 2.31-3.21l.73-.73a5.05 5.05 0 0 0 .64-6.36 1.01 1.01 0 1 0-1.35-1.49q-.04.04-.07.08A5.04 5.04 0 0 0 14.95 4a5.04 5.04 0 0 0-3.57 1.48"
          fill="currentcolor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="css-b5o75w"
    >
      Notifications
    </span>
  </span>
</button>
`;

exports[`components/Sidebar.tsx notifications icon renders correct icon when there are notifications 1`] = `
<button
  class=" css-1srvl33"
  data-testid="sidebar-notifications"
  type="button"
>
  <span
    class=" css-1spmf3f"
  >
    <span
      aria-hidden="true"
      class="css-1wits42"
      data-vc="icon-undefined"
      style="--icon-primary-color: white; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
    >
      <svg
        height="24"
        role="presentation"
        viewBox="0 0 24 24"
        width="24"
      >
        <path
          d="M6.49 17.67a2 2 0 0 0 2.83 0l-2.83-2.83a2 2 0 0 0 0 2.83m4.89-12.19-.72.73c-.78.78-2.21 1.81-3.21 2.31l-3.02 1.51c-.49.25-.58.77-.19 1.17l8.56 8.56c.4.4.92.31 1.17-.19l1.51-3.02c.49-.99 1.53-2.42 2.31-3.21l.73-.73a5.05 5.05 0 0 0 .64-6.36 1.01 1.01 0 1 0-1.35-1.49q-.04.04-.07.08A5.04 5.04 0 0 0 14.95 4a5.04 5.04 0 0 0-3.57 1.48"
          fill="currentcolor"
          fill-rule="evenodd"
        />
      </svg>
    </span>
    <span
      class="css-b5o75w"
    >
      Notifications
    </span>
  </span>
</button>
`;

exports[`components/Sidebar.tsx should render itself & its children (logged in) 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="fixed left-14 -ml-14 flex h-full w-14 flex-col overflow-y-auto bg-sidebar"
      >
        <div
          class="flex flex-1 flex-col items-center py-4"
        >
          <div
            class="mx-auto my-3"
          >
            <div
              role="presentation"
            >
              <button
                class=" css-1hmr5rx"
                data-testid="sidebar-home"
                type="button"
              >
                <span
                  class=" css-1spmf3f"
                >
                  <span
                    class="css-12mte9y"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      focusable="false"
                      height="32"
                      viewBox="0 0 32 32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      
    
                      <g
                        fill="#FFFFFF"
                      >
                        
      
                        <path
                          d="M16 28.532c-6.656 0-12.068-5.412-12.068-12.068S9.344 4.396 16 4.396v1.921c-5.597 0-10.146 4.549-10.146 10.146S10.403 26.609 16 26.609zm0 0v-1.921c5.597 0 10.146-4.549 10.146-10.146h1.921c0 6.656-5.412 12.068-12.068 12.068zm12.068-12.068h-1.921c0-5.597-4.549-10.146-10.146-10.146V4.397c6.656 0 12.068 5.412 12.068 12.068zm-6.928 3.695c-1.28-.251-2.292-.706-3.973-1.467-.464-.204-.974-.436-1.559-.696a59 59 0 0 0-1.003-.436c-2.534-1.123-3.926-1.736-5.634-1.736-1.198 0-2.098.325-2.6.937a1.72 1.72 0 0 0-.38 1.448l-1.885.362a3.67 3.67 0 0 1 .78-3.035c.613-.743 1.82-1.634 4.085-1.634 2.116 0 3.824.761 6.414 1.903.316.14.641.288.994.436.594.26 1.114.492 1.578.706 1.606.724 2.488 1.123 3.555 1.327l-.371 1.885Zm1.877.185c-.64 0-1.253-.056-1.875-.185l.371-1.885c.502.102.994.149 1.504.149 1.188 0 2.089-.298 2.609-.864s.539-1.253.51-1.615l1.913-.167c.102 1.169-.251 2.265-1.003 3.082-.622.677-1.82 1.485-4.029 1.485M16 28.532v-1.921c2.757 0 4.4-2.813 4.4-7.52s-1.67-8.652-5.096-12.3l1.402-1.318c3.778 4.02 5.616 8.476 5.616 13.618 0 5.821-2.423 9.441-6.322 9.441m-.001 0c-4.15 0-6.526-3.379-6.526-9.273 0-6.879 3.008-10.722 5.82-13.776l1.412 1.299c-3.277 3.565-5.31 6.888-5.31 12.476 0 6.08 2.506 7.352 4.604 7.352z"
                        />
                        
      
                        <path
                          d="M10.857 17.467a2.247 2.247 0 1 0 0-4.494 2.247 2.247 0 0 0 0 4.494m10.385 3.871a2.247 2.247 0 1 0 0-4.494 2.247 2.247 0 0 0 0 4.494M15.998 7.96a2.247 2.247 0 1 0 0-4.493 2.247 2.247 0 0 0 0 4.494Z"
                        />
                        
    
                      </g>
                      
  
                    </svg>
                  </span>
                  <span
                    class="css-b5o75w"
                  >
                    Home
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            class="css-2k1qcz"
          >
            <div
              role="presentation"
            >
              <button
                class=" css-1srvl33"
                data-testid="sidebar-notifications"
                type="button"
              >
                <span
                  class=" css-1spmf3f"
                >
                  <span
                    aria-hidden="true"
                    class="css-1wits42"
                    data-vc="icon-undefined"
                    style="--icon-primary-color: white; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                  >
                    <svg
                      height="24"
                      role="presentation"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <path
                        d="M6.49 17.67a2 2 0 0 0 2.83 0l-2.83-2.83a2 2 0 0 0 0 2.83m4.89-12.19-.72.73c-.78.78-2.21 1.81-3.21 2.31l-3.02 1.51c-.49.25-.58.77-.19 1.17l8.56 8.56c.4.4.92.31 1.17-.19l1.51-3.02c.49-.99 1.53-2.42 2.31-3.21l.73-.73a5.05 5.05 0 0 0 .64-6.36 1.01 1.01 0 1 0-1.35-1.49q-.04.04-.07.08A5.04 5.04 0 0 0 14.95 4a5.04 5.04 0 0 0-3.57 1.48"
                        fill="currentcolor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-b5o75w"
                  >
                    Notifications
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="css-sitfir"
        >
          <div
            class="css-bcf5ys"
          >
            <div
              role="presentation"
            >
              <button
                class=" css-1hmr5rx"
                data-testid="sidebar-quit"
                type="button"
              >
                <span
                  class=" css-1spmf3f"
                >
                  <span
                    aria-hidden="true"
                    class="css-1afrefi"
                    data-vc="icon-undefined"
                    style="--icon-primary-color: white; --icon-secondary-color: #2684FF;"
                  >
                    <svg
                      height="24"
                      role="presentation"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <g
                        fill-rule="evenodd"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          fill="currentcolor"
                          r="10"
                        />
                        <path
                          d="m13.477 9.113-4.36 4.386a1 1 0 1 0 1.418 1.41l4.36-4.386a1 1 0 0 0-1.418-1.41"
                          fill="inherit"
                        />
                        <path
                          d="m9.084 10.501 4.358 4.377a1 1 0 1 0 1.418-1.411L10.5 9.09a1 1 0 0 0-1.417 1.411"
                          fill="inherit"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    class="css-b5o75w"
                  >
                    Quit Atlassify
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="fixed left-14 -ml-14 flex h-full w-14 flex-col overflow-y-auto bg-sidebar"
    >
      <div
        class="flex flex-1 flex-col items-center py-4"
      >
        <div
          class="mx-auto my-3"
        >
          <div
            role="presentation"
          >
            <button
              class=" css-1hmr5rx"
              data-testid="sidebar-home"
              type="button"
            >
              <span
                class=" css-1spmf3f"
              >
                <span
                  class="css-12mte9y"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
    
                    <g
                      fill="#FFFFFF"
                    >
                      
      
                      <path
                        d="M16 28.532c-6.656 0-12.068-5.412-12.068-12.068S9.344 4.396 16 4.396v1.921c-5.597 0-10.146 4.549-10.146 10.146S10.403 26.609 16 26.609zm0 0v-1.921c5.597 0 10.146-4.549 10.146-10.146h1.921c0 6.656-5.412 12.068-12.068 12.068zm12.068-12.068h-1.921c0-5.597-4.549-10.146-10.146-10.146V4.397c6.656 0 12.068 5.412 12.068 12.068zm-6.928 3.695c-1.28-.251-2.292-.706-3.973-1.467-.464-.204-.974-.436-1.559-.696a59 59 0 0 0-1.003-.436c-2.534-1.123-3.926-1.736-5.634-1.736-1.198 0-2.098.325-2.6.937a1.72 1.72 0 0 0-.38 1.448l-1.885.362a3.67 3.67 0 0 1 .78-3.035c.613-.743 1.82-1.634 4.085-1.634 2.116 0 3.824.761 6.414 1.903.316.14.641.288.994.436.594.26 1.114.492 1.578.706 1.606.724 2.488 1.123 3.555 1.327l-.371 1.885Zm1.877.185c-.64 0-1.253-.056-1.875-.185l.371-1.885c.502.102.994.149 1.504.149 1.188 0 2.089-.298 2.609-.864s.539-1.253.51-1.615l1.913-.167c.102 1.169-.251 2.265-1.003 3.082-.622.677-1.82 1.485-4.029 1.485M16 28.532v-1.921c2.757 0 4.4-2.813 4.4-7.52s-1.67-8.652-5.096-12.3l1.402-1.318c3.778 4.02 5.616 8.476 5.616 13.618 0 5.821-2.423 9.441-6.322 9.441m-.001 0c-4.15 0-6.526-3.379-6.526-9.273 0-6.879 3.008-10.722 5.82-13.776l1.412 1.299c-3.277 3.565-5.31 6.888-5.31 12.476 0 6.08 2.506 7.352 4.604 7.352z"
                      />
                      
      
                      <path
                        d="M10.857 17.467a2.247 2.247 0 1 0 0-4.494 2.247 2.247 0 0 0 0 4.494m10.385 3.871a2.247 2.247 0 1 0 0-4.494 2.247 2.247 0 0 0 0 4.494M15.998 7.96a2.247 2.247 0 1 0 0-4.493 2.247 2.247 0 0 0 0 4.494Z"
                      />
                      
    
                    </g>
                    
  
                  </svg>
                </span>
                <span
                  class="css-b5o75w"
                >
                  Home
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="css-2k1qcz"
        >
          <div
            role="presentation"
          >
            <button
              class=" css-1srvl33"
              data-testid="sidebar-notifications"
              type="button"
            >
              <span
                class=" css-1spmf3f"
              >
                <span
                  aria-hidden="true"
                  class="css-1wits42"
                  data-vc="icon-undefined"
                  style="--icon-primary-color: white; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                >
                  <svg
                    height="24"
                    role="presentation"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M6.49 17.67a2 2 0 0 0 2.83 0l-2.83-2.83a2 2 0 0 0 0 2.83m4.89-12.19-.72.73c-.78.78-2.21 1.81-3.21 2.31l-3.02 1.51c-.49.25-.58.77-.19 1.17l8.56 8.56c.4.4.92.31 1.17-.19l1.51-3.02c.49-.99 1.53-2.42 2.31-3.21l.73-.73a5.05 5.05 0 0 0 .64-6.36 1.01 1.01 0 1 0-1.35-1.49q-.04.04-.07.08A5.04 5.04 0 0 0 14.95 4a5.04 5.04 0 0 0-3.57 1.48"
                      fill="currentcolor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="css-b5o75w"
                >
                  Notifications
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="css-sitfir"
      >
        <div
          class="css-bcf5ys"
        >
          <div
            role="presentation"
          >
            <button
              class=" css-1hmr5rx"
              data-testid="sidebar-quit"
              type="button"
            >
              <span
                class=" css-1spmf3f"
              >
                <span
                  aria-hidden="true"
                  class="css-1afrefi"
                  data-vc="icon-undefined"
                  style="--icon-primary-color: white; --icon-secondary-color: #2684FF;"
                >
                  <svg
                    height="24"
                    role="presentation"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        fill="currentcolor"
                        r="10"
                      />
                      <path
                        d="m13.477 9.113-4.36 4.386a1 1 0 1 0 1.418 1.41l4.36-4.386a1 1 0 0 0-1.418-1.41"
                        fill="inherit"
                      />
                      <path
                        d="m9.084 10.501 4.358 4.377a1 1 0 1 0 1.418-1.411L10.5 9.09a1 1 0 0 0-1.417 1.411"
                        fill="inherit"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  class="css-b5o75w"
                >
                  Quit Atlassify
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/Sidebar.tsx should render itself & its children (logged out) 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="fixed left-14 -ml-14 flex h-full w-14 flex-col overflow-y-auto bg-sidebar"
      >
        <div
          class="flex flex-1 flex-col items-center py-4"
        >
          <div
            class="mx-auto my-3"
          >
            <div
              role="presentation"
            >
              <button
                class=" css-1hmr5rx"
                data-testid="sidebar-home"
                type="button"
              >
                <span
                  class=" css-1spmf3f"
                >
                  <span
                    class="css-12mte9y"
                  >
                    <svg
                      aria-hidden="true"
                      fill="none"
                      focusable="false"
                      height="32"
                      viewBox="0 0 32 32"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      
    
                      <g
                        fill="#FFFFFF"
                      >
                        
      
                        <path
                          d="M16 28.532c-6.656 0-12.068-5.412-12.068-12.068S9.344 4.396 16 4.396v1.921c-5.597 0-10.146 4.549-10.146 10.146S10.403 26.609 16 26.609zm0 0v-1.921c5.597 0 10.146-4.549 10.146-10.146h1.921c0 6.656-5.412 12.068-12.068 12.068zm12.068-12.068h-1.921c0-5.597-4.549-10.146-10.146-10.146V4.397c6.656 0 12.068 5.412 12.068 12.068zm-6.928 3.695c-1.28-.251-2.292-.706-3.973-1.467-.464-.204-.974-.436-1.559-.696a59 59 0 0 0-1.003-.436c-2.534-1.123-3.926-1.736-5.634-1.736-1.198 0-2.098.325-2.6.937a1.72 1.72 0 0 0-.38 1.448l-1.885.362a3.67 3.67 0 0 1 .78-3.035c.613-.743 1.82-1.634 4.085-1.634 2.116 0 3.824.761 6.414 1.903.316.14.641.288.994.436.594.26 1.114.492 1.578.706 1.606.724 2.488 1.123 3.555 1.327l-.371 1.885Zm1.877.185c-.64 0-1.253-.056-1.875-.185l.371-1.885c.502.102.994.149 1.504.149 1.188 0 2.089-.298 2.609-.864s.539-1.253.51-1.615l1.913-.167c.102 1.169-.251 2.265-1.003 3.082-.622.677-1.82 1.485-4.029 1.485M16 28.532v-1.921c2.757 0 4.4-2.813 4.4-7.52s-1.67-8.652-5.096-12.3l1.402-1.318c3.778 4.02 5.616 8.476 5.616 13.618 0 5.821-2.423 9.441-6.322 9.441m-.001 0c-4.15 0-6.526-3.379-6.526-9.273 0-6.879 3.008-10.722 5.82-13.776l1.412 1.299c-3.277 3.565-5.31 6.888-5.31 12.476 0 6.08 2.506 7.352 4.604 7.352z"
                        />
                        
      
                        <path
                          d="M10.857 17.467a2.247 2.247 0 1 0 0-4.494 2.247 2.247 0 0 0 0 4.494m10.385 3.871a2.247 2.247 0 1 0 0-4.494 2.247 2.247 0 0 0 0 4.494M15.998 7.96a2.247 2.247 0 1 0 0-4.493 2.247 2.247 0 0 0 0 4.494Z"
                        />
                        
    
                      </g>
                      
  
                    </svg>
                  </span>
                  <span
                    class="css-b5o75w"
                  >
                    Home
                  </span>
                </span>
              </button>
            </div>
          </div>
          <div
            class="css-2k1qcz"
          >
            <div
              role="presentation"
            >
              <button
                class=" css-1srvl33"
                data-testid="sidebar-notifications"
                type="button"
              >
                <span
                  class=" css-1spmf3f"
                >
                  <span
                    aria-hidden="true"
                    class="css-1wits42"
                    data-vc="icon-undefined"
                    style="--icon-primary-color: white; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                  >
                    <svg
                      height="24"
                      role="presentation"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <path
                        d="M6.49 17.67a2 2 0 0 0 2.83 0l-2.83-2.83a2 2 0 0 0 0 2.83m4.89-12.19-.72.73c-.78.78-2.21 1.81-3.21 2.31l-3.02 1.51c-.49.25-.58.77-.19 1.17l8.56 8.56c.4.4.92.31 1.17-.19l1.51-3.02c.49-.99 1.53-2.42 2.31-3.21l.73-.73a5.05 5.05 0 0 0 .64-6.36 1.01 1.01 0 1 0-1.35-1.49q-.04.04-.07.08A5.04 5.04 0 0 0 14.95 4a5.04 5.04 0 0 0-3.57 1.48"
                        fill="currentcolor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="css-b5o75w"
                  >
                    Notifications
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="css-sitfir"
        >
          <div
            class="css-bcf5ys"
          >
            <div
              role="presentation"
            >
              <button
                class=" css-1hmr5rx"
                data-testid="sidebar-quit"
                type="button"
              >
                <span
                  class=" css-1spmf3f"
                >
                  <span
                    aria-hidden="true"
                    class="css-1afrefi"
                    data-vc="icon-undefined"
                    style="--icon-primary-color: white; --icon-secondary-color: #2684FF;"
                  >
                    <svg
                      height="24"
                      role="presentation"
                      viewBox="0 0 24 24"
                      width="24"
                    >
                      <g
                        fill-rule="evenodd"
                      >
                        <circle
                          cx="12"
                          cy="12"
                          fill="currentcolor"
                          r="10"
                        />
                        <path
                          d="m13.477 9.113-4.36 4.386a1 1 0 1 0 1.418 1.41l4.36-4.386a1 1 0 0 0-1.418-1.41"
                          fill="inherit"
                        />
                        <path
                          d="m9.084 10.501 4.358 4.377a1 1 0 1 0 1.418-1.411L10.5 9.09a1 1 0 0 0-1.417 1.411"
                          fill="inherit"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    class="css-b5o75w"
                  >
                    Quit Atlassify
                  </span>
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="fixed left-14 -ml-14 flex h-full w-14 flex-col overflow-y-auto bg-sidebar"
    >
      <div
        class="flex flex-1 flex-col items-center py-4"
      >
        <div
          class="mx-auto my-3"
        >
          <div
            role="presentation"
          >
            <button
              class=" css-1hmr5rx"
              data-testid="sidebar-home"
              type="button"
            >
              <span
                class=" css-1spmf3f"
              >
                <span
                  class="css-12mte9y"
                >
                  <svg
                    aria-hidden="true"
                    fill="none"
                    focusable="false"
                    height="32"
                    viewBox="0 0 32 32"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    
    
                    <g
                      fill="#FFFFFF"
                    >
                      
      
                      <path
                        d="M16 28.532c-6.656 0-12.068-5.412-12.068-12.068S9.344 4.396 16 4.396v1.921c-5.597 0-10.146 4.549-10.146 10.146S10.403 26.609 16 26.609zm0 0v-1.921c5.597 0 10.146-4.549 10.146-10.146h1.921c0 6.656-5.412 12.068-12.068 12.068zm12.068-12.068h-1.921c0-5.597-4.549-10.146-10.146-10.146V4.397c6.656 0 12.068 5.412 12.068 12.068zm-6.928 3.695c-1.28-.251-2.292-.706-3.973-1.467-.464-.204-.974-.436-1.559-.696a59 59 0 0 0-1.003-.436c-2.534-1.123-3.926-1.736-5.634-1.736-1.198 0-2.098.325-2.6.937a1.72 1.72 0 0 0-.38 1.448l-1.885.362a3.67 3.67 0 0 1 .78-3.035c.613-.743 1.82-1.634 4.085-1.634 2.116 0 3.824.761 6.414 1.903.316.14.641.288.994.436.594.26 1.114.492 1.578.706 1.606.724 2.488 1.123 3.555 1.327l-.371 1.885Zm1.877.185c-.64 0-1.253-.056-1.875-.185l.371-1.885c.502.102.994.149 1.504.149 1.188 0 2.089-.298 2.609-.864s.539-1.253.51-1.615l1.913-.167c.102 1.169-.251 2.265-1.003 3.082-.622.677-1.82 1.485-4.029 1.485M16 28.532v-1.921c2.757 0 4.4-2.813 4.4-7.52s-1.67-8.652-5.096-12.3l1.402-1.318c3.778 4.02 5.616 8.476 5.616 13.618 0 5.821-2.423 9.441-6.322 9.441m-.001 0c-4.15 0-6.526-3.379-6.526-9.273 0-6.879 3.008-10.722 5.82-13.776l1.412 1.299c-3.277 3.565-5.31 6.888-5.31 12.476 0 6.08 2.506 7.352 4.604 7.352z"
                      />
                      
      
                      <path
                        d="M10.857 17.467a2.247 2.247 0 1 0 0-4.494 2.247 2.247 0 0 0 0 4.494m10.385 3.871a2.247 2.247 0 1 0 0-4.494 2.247 2.247 0 0 0 0 4.494M15.998 7.96a2.247 2.247 0 1 0 0-4.493 2.247 2.247 0 0 0 0 4.494Z"
                      />
                      
    
                    </g>
                    
  
                  </svg>
                </span>
                <span
                  class="css-b5o75w"
                >
                  Home
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          class="css-2k1qcz"
        >
          <div
            role="presentation"
          >
            <button
              class=" css-1srvl33"
              data-testid="sidebar-notifications"
              type="button"
            >
              <span
                class=" css-1spmf3f"
              >
                <span
                  aria-hidden="true"
                  class="css-1wits42"
                  data-vc="icon-undefined"
                  style="--icon-primary-color: white; --icon-secondary-color: var(--ds-surface, #FFFFFF);"
                >
                  <svg
                    height="24"
                    role="presentation"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <path
                      d="M6.49 17.67a2 2 0 0 0 2.83 0l-2.83-2.83a2 2 0 0 0 0 2.83m4.89-12.19-.72.73c-.78.78-2.21 1.81-3.21 2.31l-3.02 1.51c-.49.25-.58.77-.19 1.17l8.56 8.56c.4.4.92.31 1.17-.19l1.51-3.02c.49-.99 1.53-2.42 2.31-3.21l.73-.73a5.05 5.05 0 0 0 .64-6.36 1.01 1.01 0 1 0-1.35-1.49q-.04.04-.07.08A5.04 5.04 0 0 0 14.95 4a5.04 5.04 0 0 0-3.57 1.48"
                      fill="currentcolor"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <span
                  class="css-b5o75w"
                >
                  Notifications
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
      <div
        class="css-sitfir"
      >
        <div
          class="css-bcf5ys"
        >
          <div
            role="presentation"
          >
            <button
              class=" css-1hmr5rx"
              data-testid="sidebar-quit"
              type="button"
            >
              <span
                class=" css-1spmf3f"
              >
                <span
                  aria-hidden="true"
                  class="css-1afrefi"
                  data-vc="icon-undefined"
                  style="--icon-primary-color: white; --icon-secondary-color: #2684FF;"
                >
                  <svg
                    height="24"
                    role="presentation"
                    viewBox="0 0 24 24"
                    width="24"
                  >
                    <g
                      fill-rule="evenodd"
                    >
                      <circle
                        cx="12"
                        cy="12"
                        fill="currentcolor"
                        r="10"
                      />
                      <path
                        d="m13.477 9.113-4.36 4.386a1 1 0 1 0 1.418 1.41l4.36-4.386a1 1 0 0 0-1.418-1.41"
                        fill="inherit"
                      />
                      <path
                        d="m9.084 10.501 4.358 4.377a1 1 0 1 0 1.418-1.411L10.5 9.09a1 1 0 0 0-1.417 1.411"
                        fill="inherit"
                      />
                    </g>
                  </svg>
                </span>
                <span
                  class="css-b5o75w"
                >
                  Quit Atlassify
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/Sidebar.tsx show only unread notifications should toggle show only unread notifications 1`] = `
<input
  aria-labelledby="80"
  checked=""
  data-testid="sidebar-toggle-unread-only--input"
  id="toggle-unread-only"
  name=""
  type="checkbox"
  value=""
/>
`;
